# project-chimera-openenv

./: .gitignore  Dockerfile  README.md  environment.py  grader.py  inference.py  k.dockerignore  main.py  openenv.yaml  pyproject.toml
.github/workflows/: validate.yml
backend/: environment.py  grader.py  main.py  models.py  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ExploitVisualizer.tsx
server/: app.py
