[project]
name = "project-chimera"
version = "0.1.0"
description = "OpenEnv TOCTOU benchmark for AI agents"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]


[project.scripts]
server = "server.app:main"